--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.2+1
+  url_launcher: ^6.1.3
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
