--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,5 +50,9 @@
       <string>sms</string>
       <string>tel</string>
     </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Selecionar uma foto de contato da galeria</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Tirar fotos dos contatos</string>
 </dict>
 </plist>
