--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.0.2+1
   url_launcher: ^6.1.3
   image_picker: ^0.8.5+3
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
